<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapQuest</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_today">Today</string>
    <string name="action_map">Map</string>
    <string name="action_routing">Routing</string>
    <string name="action_add">Add Event</string>
    
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    
    <string name="title_map">Map</string>
    <string name="title_eventlist">Event List</string>
    
    <string name="edit_title">Title</string>
    <string name="edit_location">Location</string>
    <string name="edit_from">From</string>
    <string name="edit_to">To</string>
    <string name="edit_notes">Notes</string>
    <string name="edit_reminder">Reminder</string>

    <string name="reminder_0">On start</string>
    <string name="reminder_5">5 minutes</string>
    <string name="reminder_10">10 minutes</string>
    <string name="reminder_15">15 minutes</string>
    <string name="reminder_30">30 minutes</string>
    <string name="reminder_45">45 minutes</string>
    <string name="reminder_60">1 hour</string>
    <string name="reminder_120">2 hours</string>
    
    <string name="reminder_alert">Notification</string>
    <string name="reminder_email">E-Mail</string>
</resources>