<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_map_position"
        android:icon="@drawable/ic_action_gps"
        android:orderInCategory="0"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map_routing"
        android:icon="@drawable/ic_action_routing"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_routing"/>
    <item
        android:id="@+id/action_map_map"
        android:icon="@drawable/ic_action_map"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_map"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>